<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="Email"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:hint="Password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="Name"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/mobile_num"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="Mobile Number"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />


    <EditText
        android:id="@+id/alamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:hint="Address"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_num"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamat"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>