...
            android:layout_height="500dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
             />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:background="@color/white"
            android:layout_width="match_parent"
...
