<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_manage_accounts_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/logout_account"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/title_logout" />

</menu>